--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,5 @@ services:
 
 
 notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/08c84711c36e875930d0
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
-
+  hipchat: [api token]@[room id or name]
 
